--- a/assets/style.css
+++ b/assets/style.css
@@ -60,6 +60,7 @@ footer a {
     color: #024e76;
 }
 /* Hero Style Start*/
+
 .hero{
     background-image: url(../hero-bg2.jpg);
     height: 600px;
@@ -218,8 +219,10 @@ footer a {
 .contact-info iframe {
     width: 400px;
     height: 400px;
+    vertical-align: left;
 }
-.contact-info dix {
+
+.contact-info {
     width: 410px;
     display: inline-block;
     vertical-align: top;
@@ -227,3 +230,25 @@ footer a {
     margin: 30px 0 0 60px;
     color: white;
 }
+.contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+}
+ .contact-info p {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+ }
+ 
+ .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
+.contact-info a {
+    color: #fce138;
+}
+/*REACH OUT STYLES END*/
