added feature/contact-form branch)

--- a/assets/style.css
+++ b/assets/style.css
@@ -62,7 +62,7 @@ footer a {
 /* Hero Style Start*/
 
 .hero{
-    background-image: url(../hero-bg2.jpg);
+    background-image: url(../hero-bg.jpg);
     height: 600px;
     background-size: cover;
     background-position: center;
