--- a/assets/style.css
+++ b/assets/style.css
@@ -31,10 +31,17 @@ header nav {
 header nav ul li {
     display: inline;
 }
+header nav ul {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   align-items: center;
+   list-style: none;
+}
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
-    font-size: 22px;
+    font-size: 1.55vw;
 }
 header h1 {
     font-weight: bold;
@@ -44,18 +51,19 @@ header h1 {
     display: inline;
 }
 footer {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
 }
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 footer div {
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -66,28 +74,41 @@ footer a {
 
 .hero{
     background-image: url(../hero-bg.jpg);
-    height: 600px;
     background-size: cover;
     background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
 }
 
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+}
 .hero-form {
     background-color: #fce138;
     padding:20px;
     width: 500px;
-    color: #024e76
+    color: #024e76;
+    width: 40%;
+    margin: 3.5%;
 }
 .hero-form {
     border: 3px solid #024e76;
     background-color: #fce138;
     padding: 20px;
-    width: 500px;
     color:#024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
-
 }
 .hero-form h3 {
     font-size: 24px;
