--- a/assets/style.css
+++ b/assets/style.css
@@ -209,37 +209,35 @@ footer a {
     flex: 12;
 }
 .trainers {
-    overflow: auto;
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .trainer {
-    width: 900px;
-    margin: 0 auto 30px auto;
+    margin: 20px;
     color: #fce138;
     background-color: #024e76;
-    overflow: auto
+    flex: 1;
 }
 .trainer img {
-    width: 35%;
-    float: left;
-    
+    width: 100%;
 }
 .trainer-bio {
-    padding: 35px;
-    float: left;
-    width: 65%;
+    padding: 25px;
+    line-height: 1.3;
 }
 .trainer-bio h3 {
-    font-size: 32px;
-    margin-bottom: 8px;
+    font-size: 28px;
 }
 .trainer-bio h4 {
     font-weight: lighter;
-    font-size: 26px;
-    margin-bottom: 25px;
+    font-size: 22px;
+    margin-bottom: 15px;
 }
 .trainer-bio p {
     font-size: 17px;
-    line-height: 1.3;
 }
 .text-left
     {
@@ -294,4 +292,6 @@ footer a {
 .contact-info a {
     color: #fce138;
 }
+
+
 /*REACH OUT STYLES END*/
