--- a/assets/style.css
+++ b/assets/style.css
@@ -39,7 +39,7 @@ header nav ul {
    list-style: none;
 }
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -79,7 +79,7 @@ footer a {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-
+    align-items: flex-start;
 }
 
 .hero-cta {
@@ -88,7 +88,7 @@ footer a {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -153,7 +153,7 @@ footer a {
 }
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -201,9 +201,11 @@ footer a {
     margin-top: 10px;
 }
  .step-img {
-     float: 1 12%;
+     flex: 1 12%;
      margin-right: 20px;
-     max-width: 100%;
+ }
+ .step-img img {
+    max-width: 100%;
  }
  .step-text {
     flex: 12;
@@ -317,5 +319,185 @@ footer a {
      padding: 15px 0;
      font-size: 16px;
  }
+
+ /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER*/
+
+ @media screen and (max-width: 980px) {
+   header {
+       padding-bottom: 0;
+       justify-content: center;
+   }
+    header h1 {
+        width: 100%;
+        text-align: center;
+    }   
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+    header nav ul li a {
+        font-size: 20px;
+    }
+    footer h2, footer div {
+        text-align: center;
+        width: 100%;
+    }
+    .hero-cta, .hero-form {
+        width: 100%;
+    }
+    .hero-cta {
+        text-align: center;
+    }
+    .section-title {
+        width: 80%;
+    }
+    .trainer {
+        flex: 0 70%;
+    }
+    .contact-info iframe {
+        flex: 1 100%;
+    }
+ }
+
+ /*MEDIA QUERY FOR TABLETS AND SMALLER */
+
+ @media screen and (max-width: 768px) {
+  section {
+      padding: 30px 15px;
+  }   
+  .step h3 {
+      flex: 1 100%;
+      text-align: center;
+  }
+  .step-info {
+      flex: 2 100%;
+      text-align: center;
+      justify-content: center;
+  }
+  .step-img {
+      flex: 0 32%;
+      margin-right: 0;
+      margin-top: 15px;
+  }
+  .step-text {
+      flex:100%;
+  }
+ }
+
+  /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER*/
+
+  @media screen and (max-width: 980px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+      }
+    
+      header h1 {
+        width: 100%;
+        text-align: center;
+      }
+    
+      header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+      }
+    
+      header nav ul li a {
+        font-size: 20px;
+      }
+    
+      footer h2, footer div {
+        text-align: center;
+        width: 100%;
+      }
+
+      .hero-cta, .hero-form {
+        width: 100%;
+      }
+      
+      .hero-cta {
+        text-align: center;
+      }
+
+      .section-title {
+        width: 80%;
+      }
+      
+      .trainer {
+        flex: 0 70%;
+      }
+      
+      .contact-info iframe{
+        flex: 1 100%;
+      }
+    }
+
+
+/*MEDIA QUERY FOR TABLETS AND SMALLER */
+
+@media screen and (max-width: 768px) {
+    section {
+        padding: 30px 15px;
+      }
+      .step h3 {
+        flex: 1 100%;
+        text-align: center;
+      }
+    
+      .step-info {
+        flex: 2 100%;
+        text-align: center;
+        justify-content: center;
+      }
+    
+      .step-img {
+        flex: 0 32%;
+        margin-right: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
+      }
+    
+      .step-text {
+        flex: 100%;  
+      }
+}
+
+/*MEDIA QUERY FOR PHONES AND SMALLER */
+
+@media screen and (max-width: 575px) {
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+      }
+    .hero-form button {
+        width: 100%;
+      }
+    
+      .section-title {
+        width: 95%;
+      }
+    
+      .intro p {
+        width: 100%;
+      }
+    
+      .trainer {
+        flex: 0 100%;
+      }
+    
+      .contact-info {
+        text-align: center;
+      }
+    
+      .contact-info > * {
+        flex: 0 100%;
+      }
+      .contact-form {
+        order: 3;
+      }
+}
 
 /*REACH OUT STYLES END*/
