--- a/assets/style.css
+++ b/assets/style.css
@@ -210,6 +210,7 @@ footer a {
  .step-text {
     flex: 12;
 }
+/*Start Trainers Section*/
 .trainers {
     width: 100%;
     margin: auto;
@@ -252,6 +253,21 @@ footer a {
 .flex-row {
     display: flex;
 }
+/*End Trainers Section*/
+
+/*Start Service Contract Section*/
+
+.service-grid-container {
+    display: grid;
+}
+.service-grid-item {
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    border: solid;
+    color: black;
+}
+
 /*REACH OUT STYLES START*/
 .contact {
     background: #024e76;
@@ -319,6 +335,8 @@ footer a {
      padding: 15px 0;
      font-size: 16px;
  }
+
+ /*End Reach Out Styles*/
 
  /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER*/
 
