--- a/assets/style.css
+++ b/assets/style.css
@@ -13,12 +13,21 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url(../hero-bg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 header h1 {
     font-weight: bold;
     margin: 0;
     font-size: 36px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     
 }
 header a {
@@ -42,6 +51,20 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+}
+.hero-form button:hover {
+    background-color: #39a6;
+}
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
 }
 header h1 {
     font-weight: bold;
@@ -49,6 +72,7 @@ header h1 {
     color: #fce138;
     margin: 0;
     display: inline;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 footer {
     display: flex;
@@ -95,20 +119,24 @@ footer a {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .hero-form {
-    background-color: #fce138;
+    background-color: 255,255,0;
     padding:20px;
     width: 500px;
     color: #024e76;
     width: 40%;
     margin: 3.5%;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(255, 255, 56, 0.8);
 }
 .hero-form {
     border: 3px solid #024e76;
-    background-color: #fce138;
+    background-color: rgba(255, 255, 56, 0.8);
     padding: 20px;
     color:#024e76;
+
 }
 .hero-form h3 {
     font-size: 24px;
@@ -125,6 +153,12 @@ footer a {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+.form-input:hover {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 .hero-form label {
     margin: 0 5px;
@@ -135,6 +169,7 @@ footer a {
    border: none;
    padding: 10px 20px;
    font-size: 16px;
+   border-radius: 10px;
 }
 /*Hero Style End*/
 
@@ -172,11 +207,13 @@ footer a {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+}
+.step:not(:last-child) {
+    border-bottom: 1px solid #39a6b2;
 }
 .step-info {
     flex: 2 70%;
@@ -361,8 +398,15 @@ footer a {
      width: 100%;
      margin-bottom: 15px;
      margin-top: 5px;
+     border-radius: 10px;
+     background-color: rgba(173,216,230,.75);
  }
 
+ .contact-form input:focus, .contact-form textarea:focus {
+    background-color:  rgba(255,255,255, 1);
+    outline: none;
+ }
+ 
  .contact-form button {
      width: 100%;
      border: none;
@@ -371,6 +415,7 @@ footer a {
      text-align: center;
      padding: 15px 0;
      font-size: 16px;
+     border-radius: 10px;
  }
 
  /*End Reach Out Styles*/
@@ -385,6 +430,7 @@ footer a {
     header h1 {
         width: 100%;
         text-align: center;
+       
     }   
     header nav ul {
         margin-top: 20px;
@@ -393,6 +439,7 @@ footer a {
     }
     header nav ul li a {
         font-size: 20px;
+        
     }
     footer h2, footer div {
         text-align: center;
@@ -466,6 +513,7 @@ footer a {
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
       }
     
       header h1 {
@@ -482,7 +530,7 @@ footer a {
       header nav ul li a {
         font-size: 20px;
       }
-    
+
       footer h2, footer div {
         text-align: center;
         width: 100%;
@@ -512,32 +560,50 @@ footer a {
 
 /*MEDIA QUERY FOR TABLETS AND SMALLER */
 
+/*MEDIA QUERY FOR TABLETS AND SMALLER */
+
 @media screen and (max-width: 768px) {
     section {
         padding: 30px 15px;
-      }
-      .step h3 {
+    }   
+  
+    .step h3 {
         flex: 1 100%;
         text-align: center;
-      }
-    
-      .step-info {
+    }
+    .step-info {
         flex: 2 100%;
         text-align: center;
         justify-content: center;
-      }
-    
-      .step-img {
+    }
+    .step-img {
         flex: 0 32%;
         margin-right: 0;
         margin-top: 15px;
-        margin-bottom: 15px;
-      }
-    
-      .step-text {
-        flex: 100%;  
-      }
-}
+    }
+    .step-text {
+        flex:100%;
+    }
+  
+    .service-grid-container {
+      grid-template-columns: 1fr 1fr;
+    }
+  
+    .service-grid-item.basic {
+      grid-column: 1;
+    }
+  
+    .service-grid-item.both {
+      grid-column: 1 / -1;
+    }
+  
+    .service-grid-item.cancel {
+      transform: none;
+      writing-mode: unset;
+      grid-column: 1 / -1;
+      grid-row: -1;
+    }
+  }
 
 /*MEDIA QUERY FOR PHONES AND SMALLER */
 
