fixed checkbox error

--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+    --primary-color-transparent: rgba(252,225,56, 0.8);
+    --secondary-color-transparent: rgba(2, 78, 118, 0.8);
+  }
+  
 body {
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
@@ -21,6 +29,7 @@ header {
     background-position: center;
     background-attachment: fixed;
     background-position: 80%;
+    z-index: 9999;
 }
 header h1 {
     font-weight: bold;
@@ -120,24 +129,19 @@ footer a {
     font-size: 55px;
     color: #fce138;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    line-height: 1.2;
 }
 .hero-form {
-    background-color: 255,255,0;
-    padding:20px;
-    width: 500px;
-    color: #024e76;
+    border: 3px solid var(--secondary-color);
+    background-color: var(--primary-color-transparent);
+    padding: 20px;
     width: 40%;
     margin: 3.5%;
+    color: var(--secondary-color);
     border-radius: 15px;
-    box-shadow: 0 0 10px rgba(255, 255, 56, 0.8);
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
-.hero-form {
-    border: 3px solid #024e76;
-    background-color: rgba(255, 255, 56, 0.8);
-    padding: 20px;
-    color:#024e76;
 
-}
 .hero-form h3 {
     font-size: 24px;
     margin: 0px;
@@ -154,8 +158,16 @@ footer a {
     width: 100%;
     margin-bottom: 15px;
     border-radius: 10px;
-    background-color: rgba(255,255,255, 0.75);
+
 }
+.form-input {
+    background-color: rgba(255,255,255, 0.75);
+  }
+  
+  .form-input:focus {
+    background-color: rgba(255,255,255, 1);
+  }
+  
 .form-input:hover {
     background-color: rgba(255,255,255, 1);
     outline: none;
@@ -165,12 +177,89 @@ footer a {
 }
 .hero-form button {
     color: #fce138;
-    background-color: #024e76;
+     background-color: #024e76;
    border: none;
    padding: 10px 20px;
    font-size: 16px;
    border-radius: 10px;
 }
+.hero-form button:hover {
+    background-color: var(--tertiary-color);  
+  }
+  
+
+.form-input:focus {
+  background-color: rgba(255,255,255, 1);
+}
+
+.checkbox-wrapper input[type="checkbox"], 
+.radio-wrapper input[type="radio"] {
+  opacity: 0;
+}
+
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+    content: "";
+    display: inline-block;    
+    height: 20px;
+    width: 20px;
+    border-left: 1px solid var(--secondary-color);
+    position:absolute;
+    left: -30px;
+    top: -4px;
+    background: rgba(255,255,255,0.75);
+}
+
+.checkbox-wrapper label::after {
+    content: "";
+    display: inline-block;    
+    height: 6px;
+    width: 14px;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
+    transform: rotate(-58deg);
+    position:absolute;
+    left: -26px;
+    top: 1px;
+}
+
+.checkbox-wrapper label, .radio-wrapper label {
+    position: relative;
+    left: 10px;
+    margin: 10px;
+    line-height: 1.6;
+}
+
+.radio-wrapper label::before {
+    border-radius: 50%;
+}
+
+.radio-wrapper label::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    position:absolute;
+    left: -29px;
+    top: -3px;
+    border-radius: 50%;
+    background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
+  
+}
+
+
+.checkbox-wrapper input[type="checkbox"] + label::after, 
+.radio-wrapper input[type="radio"] + label::after {
+    content: none;
+}
+
+
+.checkbox-wrapper input[type="checkbox"]:checked + label::after, 
+.radio-wrapper input[type="radio"]:checked + label::after {
+    content: "";
+}
+
+
+
+
 /*Hero Style End*/
 
 .intro p {
