--- a/assets/style.css
+++ b/assets/style.css
@@ -12,12 +12,12 @@
   }
   
 body {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-family: Helvetica, Arial, sans-serif;
 }
 header {
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -35,13 +35,13 @@ header h1 {
     font-weight: bold;
     margin: 0;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     
 }
 header a {
     text-decoration: none;
-    color: #fce138;
+    color:var(--primary-color);
 }
 header nav {
     margin: 7px 0;
@@ -63,22 +63,22 @@ header nav ul li a {
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
 }
 .hero-form button:hover {
-    background-color: #39a6;
+    background-color: var(--tertiary-color);
 }
 .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
+    color: var(--primary-color);
+    background: var(--tertiary-color);
 }
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
     display: inline;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -87,12 +87,12 @@ footer {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background: #fce138;
+    background:var(--primary-color);
     width: 100%;
     padding: 40px 35px;
 }
 footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -101,7 +101,7 @@ footer div {
     text-align: right;
 }
 footer a {
-    color: #024e76;
+    color: var(--secondary-color);
 }
 /* Hero Style Start*/
 
@@ -127,7 +127,7 @@ footer a {
 .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     line-height: 1.2;
 }
@@ -150,11 +150,11 @@ footer a {
     margin: 5px 0 15px 0;
 }
 .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     border-radius: 10px;
@@ -346,8 +346,8 @@ footer a {
 }
 .trainer {
     margin: 20px;
-    color: #fce138;
-    background-color: #024e76;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
     flex: 1;
 }
 .trainer img {
@@ -384,7 +384,7 @@ footer a {
 /*Start Service Contract Section*/
 
 .services {
-    background: #fce138;
+    background: var(--primary-color);
 }
 
 .service-grid-wrapper {
@@ -399,14 +399,14 @@ footer a {
     /*repeat(iterator, size)*/
     grid-template-columns: 1fr repeat(2, 4fr);
     grid-template-rows: repeat(5, 1fr) 2fr;
-    border: 2px solid #024e76;
-    color: #024e76;
+    border: 2px solid var(--secondary-color);
+    color: var(--secondary-color);
     font-size: 1.2rem;
 }
 
 .service-grid-item {
     padding: 15px 0;
-    border: 2px solid #024e76;
+    border: 2px solid var(--secondary-color);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -433,25 +433,25 @@ footer a {
 
 /*REACH OUT STYLES START*/
 .contact {
-    background: #024e76;
+    text-align: center;
+    background: var(--secondary-color);
 }
 .contact-info > * {
     flex: 1;
     margin: 15px;
 }
 .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);
 }
 .contact-info iframe {
-    height: 400px;
-    vertical-align: left;
+    min-height: 400px;
 }
 .contact-info div {
     color: white;
 }
 
 .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
 }
 
@@ -461,36 +461,38 @@ footer a {
     flex-wrap: wrap;
 }
 
- .contact-info p {
+ .contact-info p, .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 16px;
     font-style: normal;
  }
  
- .contact-info address {
-    margin: 20px 0;
-    line-height: 1.5;
-    font-size: 16px;
-    font-style: normal;
-}
+  
 .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
 }
  
+.contact-form label {
+    opacity: 0;
+  }
+  
  .contact-form input, .contact-form textarea {
-     border: 1px solid #024e76;
+     border: 1px solid var(--secondary-color);
      display: block;
      padding: 7px 15px;
      font-size: 16px;
-     color: #024e76;
+     color: var(--secondary-color);
      width: 100%;
      margin-bottom: 15px;
      margin-top: 5px;
      border-radius: 10px;
      background-color: rgba(173,216,230,.75);
  }
-
+ .contact-form textarea {
+    resize: none;
+  }
+  
  .contact-form input:focus, .contact-form textarea:focus {
     background-color:  rgba(255,255,255, 1);
     outline: none;
@@ -499,13 +501,19 @@ footer a {
  .contact-form button {
      width: 100%;
      border: none;
-     background: #fce138;
-     color: #024e76;
+     background: var(--primary-color);
+     color: var(--secondary-color);
      text-align: center;
      padding: 15px 0;
      font-size: 16px;
      border-radius: 10px;
  }
+ .contact-form button:hover {
+    color: var(--primary-color);
+    background: var(--tertiary-color);
+  }
+  
+  
 
  /*End Reach Out Styles*/
 
