--- a/assets/style.css
+++ b/assets/style.css
@@ -373,9 +373,9 @@ footer a {
     position: absolute;
     top: 0;
     left: 0;
-    opacity: 0;
-    transition: .5s linear;  
+   
 }
+
 
 .trainer-img h3 {
     font-size: 28px;
@@ -384,8 +384,17 @@ footer a {
     transition-duration: .6s;
     transition-timing-function: ease-in-out;
     margin-bottom: 5px;
+    position: relative;
     z-index: 1;
 }
+
+.trainer-img h4 {
+    font-weight: lighter;
+    font-size: 22px;
+    position: relative;
+    z-index: 1;
+}  
+
 .trainer-1 {
     background-image: url("../assets/images/trainer-1.jpg");
 }
